--- a/content/projects/portfolio.mdx
+++ b/content/projects/portfolio.mdx
@@ -27,3 +27,9 @@ Je suis aujourd’hui à la recherche d’une opportunité en tant que développ
 Merci de votre visite,
 
 Mathieu Faucher
+
+**tl;dr**
+
+J'ai fait ce site pour tester mon desir de faire du dev full-stack. 
+
+Je veux travailler pour botpress.
