--- a/content/projects/beneva.mdx
+++ b/content/projects/beneva.mdx
@@ -1,13 +1,19 @@
 ---
 title: Application web pour Beneva
-description: Durant mon premier stage j'ai developpé une application web pour Beneva en PHP avec bootstrap.
+description: Durant mon premier stage, j'ai developpé une application web pour Beneva en PHP avec bootstrap.
 date: "2022-02-15"
   
 ---
 
 
-De debut 2022 a la fin 2023, J'ai travaillé sur la production d'un système d'automatisation de tâches de sécurité comme programmeur full-stack. 
+De debut 2022 à la fin 2023, j'ai travaillé sur la production d'un système d'automatisation de tâches de sécurité comme programmeur full-stack. 
 
-J'ai repris un projet parti par d'ancien stagiaires qui était programmé en PHP avec comme outils de front-end, html, CSS avec Bootstrap et javascript.
+J'ai repris un projet parti par d'ancien stagiaires qui était programmé en PHP avec MySQL avec comme outils de front-end, html, CSS avec Bootstrap et javascript.
 
-Lors de ce
+Lors de ce stage, j'en ai appris sur la sécurité informatique dans plusieurs contexte avec les differents framework de sécurité du NIST.
+
+tl;dr
+
+- Sécurité informatique
+- PHP
+- Bootstrap
