--- a/content/projects/integration.mdx
+++ b/content/projects/integration.mdx
@@ -1,6 +1,6 @@
 ---
 title: Site web intégration
-description: J'ai pris l'initiative de faire un site web pour les intégrations du RéGIé de 2022
+description: J'ai pris l'initiative de faire un site web pour les intégrations du RÉGIÉ de 2022
 date: "2022-08-21"
 url: https://gelgif-integration-math-fauch.vercel.app/
 published: true
