--- a/content/projects/ideo.mdx
+++ b/content/projects/ideo.mdx
@@ -1,5 +1,5 @@
 ---
-title: Stagiaire Linux embarqué chez
+title: Stagiaire Linux embarqué chez Idéo Concept
 description: J'ai passé mon deuxième stage dans une PME d'une dizaine d'employé où j'ai fait du developpement bas niveau sur Linux et du IoT.
 date: "2023-04-01"
 published: true
