--- a/content/projects/portfolio.mdx
+++ b/content/projects/portfolio.mdx
@@ -2,6 +2,8 @@
 title: Lettre de presentation
 description: Petite lettre de présentation a l'intention de botpress.
 date: "2025-07-24"
+repository: Math-Fauch/mathfauch.com
+url: https://mathfauch.vercel.com
   
 ---
 
@@ -30,6 +32,6 @@ Mathieu Faucher
 
 **tl;dr**
 
-J'ai fait ce site pour tester mon desir de faire du dev full-stack. 
+J'ai fait ce site pour tester mon désir de faire du dev full-stack. 
 
 Je veux travailler pour botpress.
