--- a/content/projects/portfolio.mdx
+++ b/content/projects/portfolio.mdx
@@ -16,7 +16,7 @@ Parmi mes réalisations, je tiens à mettre en avant ce projet de portfolio que 
 
 Mon parcours comprend également :
 
-    Un [premier site développé en React](../projects/integration) pour de ma semaine d'intégration universitaire, une initiation concrète au développement web. ()
+    Un [premier site développé en React](../projects/integration) pour de ma semaine d'intégration universitaire, une initiation concrète au développement web.
 
     Une [expérience en PHP](../projects/beneva) durant mon premier stage chez Beneva, où j’ai découvert les bases du back-end et renforcé ma compréhension du fonctionnement global d’un site ainsi que des bases de donnees.
 
