--- a/content/projects/auxiliaireenseignement.mdx
+++ b/content/projects/auxiliaireenseignement.mdx
@@ -1,6 +1,6 @@
 ---
 title: Auxiliaire d'enseignement
-description: J'ai suppervisé des laboratoires, monté des examens de laboratoire et les corrigés dans les cours de Systèmes, Microprocesseurs et interfaces (STM-32) et Conception de systèmes numériques programmables (VHDL)
+description: J'ai suppervisé des laboratoires, monté des examens de laboratoire et fait la correction dans les cours de Systèmes, Microprocesseurs et interfaces (STM-32) et Conception de systèmes numériques programmables (VHDL)
 date: "2024-09-02"
 published: true
   
