--- a/content/projects/beneva.mdx
+++ b/content/projects/beneva.mdx
@@ -6,11 +6,11 @@ date: "2022-02-15"
 ---
 
 
-De debut 2022 à la fin 2023, j'ai travaillé sur la production d'un système d'automatisation de tâches de sécurité comme programmeur full-stack. 
+De début 2022 à la fin 2023, j'ai travaillé sur la production d'un système d'automatisation de tâches de sécurité comme programmeur full-stack. 
 
-J'ai repris un projet parti par d'ancien stagiaires qui était programmé en PHP avec MySQL avec comme outils de front-end, html, CSS avec Bootstrap et javascript.
+J'ai repris un projet initié par d'ancien stagiaires qui était programmé en PHP avec MySQL avec comme outils de front-end, HTML, CSS avec Bootstrap et Javascript.
 
-Lors de ce stage, j'en ai appris sur la sécurité informatique dans plusieurs contexte avec les differents framework de sécurité du NIST.
+Lors de ce stage, j'ai approfondi mes connaissances sur la sécurité informatique dans plusieurs contexte avec les différents frameworks de sécurité du NIST.
 
 **tl;dr**
 
