--- a/content/projects/gppubi.mdx
+++ b/content/projects/gppubi.mdx
@@ -1,6 +1,6 @@
 ---
-title: programmeur Gameplay Ubisoft
-description: Dans l'équipe "Fight", j'ai travaillé comme programmeur gameplay sur Assassin's Creed Shadows. Puisque le projet approchais sa fin, j'ai surtout travaillé à fixer des bogues ce qui m'a permis d'en apprendre sur plusieurs systèmes en lien avec les combat dans cette industrie.
+title: Programmeur Gameplay Ubisoft
+description: Dans l'équipe "Fight", j'ai travaillé comme programmeur gameplay sur Assassin's Creed Shadows. Puisque le projet approchait sa fin, j'ai surtout travaillé à fixer des bogues ce qui m'a permis d'en apprendre sur plusieurs systèmes en lien avec le combat dans cette industrie.
 date: "2024-04-02"
 published: true
   
