--- a/content/projects/ideo.mdx
+++ b/content/projects/ideo.mdx
@@ -1,6 +1,6 @@
 ---
 title: Stagiaire Linux embarqué chez Idéo Concept
-description: J'ai passé mon deuxième stage dans une PME d'une dizaine d'employé où j'ai fait du developpement bas niveau sur Linux et du IoT.
+description: J'ai passé mon deuxième stage dans une PME d'une dizaine d'employés où j'ai fait du developpement bas niveau sur Linux et du IoT.
 date: "2023-04-02"
 published: true
   
