--- a/content/projects/integration.mdx
+++ b/content/projects/integration.mdx
@@ -6,11 +6,11 @@ url: https://gelgif-integration-math-fauch.vercel.app/
 published: true
 ---
 
-Au travers d'autres preparations pour les integration de la cohorte de 2022, j'ai pris le temps de faire une premiere application web.
+Au travers d'autres préparations pour les intégrations de la cohorte de 2022, j'ai pris le temps de réaliser une première application web.
 
-Cette experience m'a appris comment faire du react simple comme faire des formulaire et faire des comptes utilisateurs avec Firebase.
+Cette experience m'a appris comment utiliser React de manière simple pour faire entre autres, des formulaire et des comptes utilisateurs avec Firebase.
 
-J'ai aussi appris a deployer une application sur Vercel a ce moment.
+J'ai aussi appris à déployer une application sur Vercel avec ce projet.
 
 **tl;dr**
 
