--- a/content/projects/portfolio.mdx
+++ b/content/projects/portfolio.mdx
@@ -1,6 +1,6 @@
 ---
 title: Lettre de presentation
-description: Petite lettre de présentation a l'intention de botpress.
+description: Lettre de présentation à l'intention de Botpress.
 date: "2025-07-24"
 repository: Math-Fauch/mathfauch.com
 url: https://mathfauch.vercel.com
@@ -12,17 +12,17 @@ Bonjour et bienvenue sur mon portfolio,
 
 Je m'appelle Mathieu. À travers ce site je souhaite vous présenter mon parcours, mes projets, ainsi que mon intérêt pour le développement d'expériences utilisateur de qualité.
 
-Parmi mes réalisations, je tiens à mettre en avant ce projet de portfolio que j'ai réalisé afin de tester mes compétences et mes intérets. J'ai effectivement eu beaucoup de plaisir à trouver des technologies, à les utiliser et à les mettres à ma sauce pour faire ce projet. Cette application web m'a confirmé mon intéret pour venir travailler pour vous.
+Parmi mes réalisations, je tiens à mettre en avant ce projet de portfolio que j'ai réalisé afin de tester mes compétences et mes intérêts. J'ai effectivement eu beaucoup de plaisir à trouver des technologies, à les utiliser et à les mettre à ma sauce pour faire ce projet. Cette application web m'a confirmé mon intéret pour venir travailler pour vous.
 
 Mon parcours comprend également :
 
-    Un [premier site développé en React](../projects/integration) pour de ma semaine d'intégration universitaire, une initiation concrète au développement web.
+    Un [premier site développé en React](../projects/integration) lors de ma semaine d'intégration universitaire, une initiation concrète au développement web.
 
-    Une [expérience en PHP](../projects/beneva) durant mon premier stage chez Beneva, où j’ai découvert les bases du back-end et renforcé ma compréhension du fonctionnement global d’un site ainsi que des bases de donnees.
+    Une [expérience en PHP](../projects/beneva) durant mon premier stage chez Beneva, où j’ai découvert les bases du back-end et renforcé ma compréhension du fonctionnement global d’un site ainsi que des bases de données.
 
     Un projet d’application mobile réalisé en Flutter dans le cadre de mon dernier cours à l’université, enrichissant ma perspective sur le développement multiplateforme et l’architecture des interfaces mobiles.
 
-Chacune de ces expériences a contribué à forger ma polyvalence en developpement web et mon sens du détail dans la conception d’interfaces utilisateurs.
+Chacune de ces expériences a contribué à forger ma polyvalence en developpement web et mon sens du détail dans la conception d’interfaces utilisateur.
 
 Je suis aujourd’hui à la recherche d’une opportunité en tant que développeur web, prêt à m’investir dans des projets innovants et stimulants.
 
@@ -34,4 +34,4 @@ Mathieu Faucher
 
 J'ai fait ce site pour tester mon désir de faire du dev full-stack. 
 
-Je veux travailler pour botpress.
+Je veux travailler pour Botpress.
