typo: add accent

--- a/content/projects/portfolio.mdx
+++ b/content/projects/portfolio.mdx
@@ -12,7 +12,7 @@ Bonjour et bienvenue sur mon portfolio,
 
 Je m'appelle Mathieu. À travers ce site je souhaite vous présenter mon parcours, mes projets, ainsi que mon intérêt pour le développement d'expériences utilisateur de qualité.
 
-Parmi mes réalisations, je tiens à mettre en avant ce projet de portfolio que j'ai réalisé afin de valider mes compétences et mes intérêts. J'ai effectivement eu beaucoup de plaisir à trouver des technologies, à les utiliser et à les mettre à ma sauce pour faire ce projet. Cette application web m'a confirmé mon intéret pour venir travailler pour vous.
+Parmi mes réalisations, je tiens à mettre en avant ce projet de portfolio que j'ai réalisé afin de valider mes compétences et mes intérêts. J'ai effectivement eu beaucoup de plaisir à trouver des technologies, à les utiliser et à les mettre à ma sauce pour faire ce projet. Cette application web m'a confirmé mon intérêt pour venir travailler pour vous.
 
 Mon parcours comprend également :
 
